# HPCC-Platform

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  404.html  BUILD_ME.html  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  NuGet.Config.in  README.html  README.md  SPDX-MERGER-README.md  compose-dev.sh  compose-dev.yaml  compose.yml  eclwatch.spdx.json  hashmap.json  hpcc-platform.spdx.json  index.html  merge-spdx.js  package-lock.json  package.json  vcpkg-emsdk.code-workspace  vcpkg-linux.code-workspace  vcpkg-osx.code-workspace  vcpkg-win.code-workspace  vcpkg.json  vcpkg.json.in  vcpkg_usage.txt
.devcontainer/: devcontainer.json  ubuntu-20.04.dockerfile
.github/: dependabot.yml
.github/workflows/: build-and-publish.yml  build-assets.yml  build-containers-pr.yml  build-containers-target-branch.yml  build-docker.yml  build-eclwatch.yml  build-gh_runner.yml  build-test-eclwatch.yml  build-vcpkg.yml  deploy-docs.yml  jirabot.yml  smoketest.yml  test-smoke-gh_runner.yml  test-unit-gh_runner.yml
assets/: BUILD_ME.md.BdI_o2-W.js  BUILD_ME.md.BdI_o2-W.lean.js  BUILD_ME.md.Bf1f6bi_.js  BUILD_ME.md.Bf1f6bi_.lean.js  BUILD_ME.md.yEKIKZGI.js  BUILD_ME.md.yEKIKZGI.lean.js  README.md.7JP4EivV.js  README.md.7JP4EivV.lean.js  README.md.BG_dm7X3.js  README.md.BG_dm7X3.lean.js  README.md.DzoD0kYL.js  README.md.DzoD0kYL.lean.js  app.CJ9Luk-s.js  app.D5RkUmY4.js  build_utils_builds_file_transfer_README.md.BEwyFoTh.js  build_utils_builds_file_transfer_README.md.BEwyFoTh.lean.js  build_utils_builds_file_transfer_README.md.CjPYauxS.js  build_utils_builds_file_transfer_README.md.CjPYauxS.lean.js  cmake_modules_DOCUMENTATION.md.9eP4bLZF.js  cmake_modules_DOCUMENTATION.md.9eP4bLZF.lean.js  cmake_modules_DOCUMENTATION.md.BxD1SryS.js  cmake_modules_DOCUMENTATION.md.BxD1SryS.lean.js  cmake_modules_DOCUMENTATION.md.Dmujx9RJ.js  cmake_modules_DOCUMENTATION.md.Dmujx9RJ.lean.js  dali_sasha_sasha.md.BBZs8Edw.js  dali_sasha_sasha.md.BBZs8Edw.lean.js  dali_sasha_sasha.md.hQE5jEXA.js  dali_sasha_sasha.md.hQE5jEXA.lean.js  devdoc_BuildWorkflows.md.jm0Qz7Ae.js  devdoc_BuildWorkflows.md.jm0Qz7Ae.lean.js  devdoc_CodeGenerator.md.DTn0X3se.js  devdoc_CodeGenerator.md.DTn0X3se.lean.js  devdoc_CodeGenerator.md.DgtvQDBB.js  devdoc_CodeGenerator.md.DgtvQDBB.lean.js  devdoc_CodeGenerator.md.qm9xQov3.js  devdoc_CodeGenerator.md.qm9xQov3.lean.js  devdoc_CodeReviews.md.BQTTICqm.js  devdoc_CodeReviews.md.BQTTICqm.lean.js  devdoc_CodeReviews.md.BXasgsSf.js  devdoc_CodeReviews.md.BXasgsSf.lean.js  (+247 more)
assets/chunks/: @localSearchIndexroot.BShmQT8n.js  @localSearchIndexroot.CEporzeC.js  VPLocalSearchBox.BEL-dkur.js  VPLocalSearchBox.MobMBNUH.js  theme.BYB9-2bQ.js  theme._G6eBTRD.js
build_utils/builds_file_transfer/: README.html
cmake_modules/: DOCUMENTATION.html  FindLIBMEMCACHED.cmake  commonSetup.cmake  docMacros.cmake  hpcc_compiler_flags.cmake  hpcc_macros.cmake  hpcc_options.cmake  options.cmake  plugins.cmake  vcpkg.cmake
cmake_modules/dependencies/: jammy.cmake
common/deftype/: CMakeLists.txt
common/dllserver/: CMakeLists.txt
common/environment/: CMakeLists.txt
common/fileview2/: CMakeLists.txt
common/pkgfiles/: CMakeLists.txt
common/remote/: CMakeLists.txt
common/roxiecommlib/: CMakeLists.txt
common/thorhelper/: CMakeLists.txt
common/workunit/: CMakeLists.txt
common/wuanalysis/: CMakeLists.txt
common/wuwebview/: CMakeLists.txt
dali/base/: CMakeLists.txt  (+1 more)
devdoc/: BuildWorkflows.html  Building.md  CodeGenerator.html  CodeReviews.html  CodeSubmissions.html  DevDocs.html  DevTestWithLDAP.html  DeveloperDocs.html  Development.html  Development.md  ESDLFunctions.html  EndUsers.html  GitAuthenticate.html  LDAPSecurityManager.html  MemoryManager.html  Metrics.html  NewFileProcessing.html  Operations.html  OptimizingRoxieQueryPerformance.html  QAUsers.html  README.html  SecurityConfig.html  SecurityUserAuthentication.html  StyleGuide.html  TestWorkflows.html  UserBuildAssets.html  VersionSupport.html  Workunits.html  dali.html  helmReadmes.html  newActivity.html  roxie.html
dockerfiles/: Dockerfile  buildall-common.sh  image.sh
docs/: DOCUMENTATION.html
ecllibrary/: StyleGuide.html
esp/: build.sh
initfiles/: DOCUMENTATION.html
plugins/wasmembed/: CMakeLists.txt  abi.cpp  abi.hpp  abi.py  cmcpp.cpp  cmcpp.hpp  context.hpp  host.cpp  host.hpp  secure-enclave.cpp  secure-enclave.hpp  secureenclave.cpp  secureenclave.hpp  util.cpp  util.hpp  val.cpp  val.hpp  wasm.ecllib  wasmembed.cpp  wat.ecllib  watembed.cpp
plugins/wasmembed/component-model/: CMakeLists.txt  boolean.cpp  boolean.hpp  context.cpp  context.hpp  float.cpp  float.hpp  integer.hpp  list.cpp  list.hpp  load.hpp  store.hpp  string.cpp  string.hpp  traits.cpp  traits.hpp  util.cpp  util.hpp
plugins/wasmembed/component-model/src/: context.hpp  float.cpp  float.hpp  integer.hpp  lift.hpp  list.hpp  load.hpp  lower.hpp  record.hpp  store.hpp  string.cpp  string.hpp  traits.hpp  util.cpp  util.hpp
plugins/wasmembed/component-model/tests/: CMakeLists.txt  host-util.cpp  host-util.hpp  main.cpp
plugins/wasmembed/secure-enclave/: CMakeLists.txt  abi.cpp  abi.hpp  abi.py  secure-enclave.cpp  secure-enclave.hpp  util.cpp  util.hpp
plugins/wasmembed/secure-enclave/test/: test.wasm  wasm_test.ecl
plugins/wasmembed/test/: CMakeLists.txt  CMakePresets.json  build.sh  hpcc-scalar-test.wit  hpcc-test.wit  main.cpp  wasm_test.ecl  wasm_test.manifest  wasmembed.ecl  wasmembed.manifest
plugins/wasmembed/test-ecl/: test.wasm  test.wat  wasm_test.ecl  wasm_test.manifest
plugins/wasmembed/test-guest/: CMakeLists.txt  test.wit
plugins/wasmembed/test-guest/JavaScript/componentize-js/: Cargo.lock:Zone.Identifier
plugins/wasmembed/test-guest/cpp/: CMakeLists.txt
plugins/wasmembed/test-guest/cpp/wasi-sdk/: CMakeLists.txt
plugins/wasmembed/test-guest/cpp/wasi-sdk/add/: CMakeLists.txt  main.cpp
plugins/wasmembed/test-guest/cpp/wasi-sdk/test/: CMakeLists.txt  main.cpp
plugins/wasmembed/test/.devcontainer/: devcontainer.json
plugins/wasmembed/test/wasm32-wasi/: Dockerfile
system/logaccess/ElasticStack/: CMakeLists.txt
(+816 files in other folders)
